--- a/fzi_v2/.gitignore
+++ b/fzi_v2/.gitignore
@@ -8,28 +8,16 @@
 # testing
 /coverage
 
-# next.js
-/.next
-/out
-
 # production
 /build
 
 # misc
 .DS_Store
-*.pem
-Thumbs.db
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-# dotenv local files
-.env*.local
-
-# local folder
-local
-
-# vercel
-.vercel
